@startuml
'https://plantuml.com/class-diagram

abstract class Alg {
    Alg prime()
    __neg__()
    __mul__()
    SeqAlg __add__()
}

together {
    abstract class SimpleAlg
    class Inv
    class Mul
    class SeqAlg
}

SimpleAlg -up[hidden]-> Alg
Alg  <|--  SimpleAlg
Alg  <|--  Inv
Alg  <|--  Mul
note top of Inv: R'
note top of Mul: R2
Alg <|-- SeqAlg
note top of SeqAlg: A sequence of algs

' under SimpleAlg
together {
    abstract class NSimpleAlg
    class AnnotationAlg

    SimpleAlg  <|--  NSimpleAlg
    SimpleAlg  <|--  AnnotationAlg
}

note top of AnnotationAlg: Not a real alg\nNeed to get rid of it

' Under NSimpleAlg
together {
    abstract class AnimationAbleAlg

    abstract class SliceAbleAlg {
        __getitem__(self, items)
    }
}

NSimpleAlg  <|--  AnimationAbleAlg
NSimpleAlg  <|--  SliceAbleAlg

'under AnimationAbleAlg and SliceAbleAlg
together {
    abstract class FaceAlg
    abstract class SliceAlg
    abstract class WholeCubeAlg
    abstract class DoubleLayerAlg


    ' Make SliceAlg right to Face they both under SliceAbleAlg
    FaceAlg -right[hidden]-> SliceAlg
}


SliceAbleAlg  <|--  FaceAlg
AnimationAbleAlg  <|--  FaceAlg
AnimationAbleAlg  <|--  DoubleLayerAlg

note top of DoubleLayerAlg: R[1:N-1]

note top of SliceAbleAlg: R[2], R[1:2], \nR[2,4]

SliceAbleAlg  <|--  SliceAlg
AnimationAbleAlg  <|--  SliceAlg

NSimpleAlg  <|--  WholeCubeAlg
AnimationAbleAlg  <|--  WholeCubeAlg


together  {
    FaceAlg <|-- U
    FaceAlg <|-- D
    FaceAlg <|-- F
    FaceAlg <|-- B
    FaceAlg <|-- R
    FaceAlg <|-- L
}


together  {
    DoubleLayerAlg <|-- Uw
    DoubleLayerAlg <|-- Dw
    DoubleLayerAlg <|-- Fw
    DoubleLayerAlg <|-- Bw
    DoubleLayerAlg <|-- Rw
    DoubleLayerAlg <|-- Lw
}



together  {
    WholeCubeAlg <|-- X
    WholeCubeAlg <|-- Y
    WholeCubeAlg <|-- Z
}


together  {
    SliceAlg <|-- M
    SliceAlg <|-- E
    SliceAlg <|-- S
}

' try to make groups on under the other
U -down[hidden]-> S
Lw -down[hidden]-> X





@enduml